--- a/rivol_imt/package.json
+++ b/rivol_imt/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,14 +13,15 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "set PORT=3010 && react-scripts start",
+    "build": "set PORT=3010 && react-scripts build",
+    "test": "set PORT=3010 && react-scripts test",
+    "eject": "set PORT=3010 && react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
