--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,10 @@ click==8.1.7
 colorama==0.4.6
 exceptiongroup==1.2.2
 Flask==3.0.3
+Flask-Cors==5.0.0
+Flask-SQLAlchemy==3.1.1
 graphql-core==3.2.3
+greenlet==3.1.1
 grpcio==1.66.1
 grpcio-tools==1.66.1
 idna==3.8
@@ -17,10 +20,11 @@ MarkupSafe==2.1.5
 protobuf==5.28.0
 py-mon==2.0.5
 requests==2.32.3
+setuptools==75.1.0
 sniffio==1.3.1
+SQLAlchemy==2.0.36
 starlette==0.38.4
 typing_extensions==4.12.2
 urllib3==2.2.2
 watchdog==5.0.0
 Werkzeug==3.0.4
-flask-cors==5.0.0
