--- a/movie/requirements.txt
+++ b/movie/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.7
 colorama==0.4.6
 exceptiongroup==1.2.2
 Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
 graphql-core==3.2.3
 grpcio==1.66.1
 grpcio-tools==1.66.1
@@ -20,5 +21,4 @@ sniffio==1.3.1
 starlette==0.38.4
 typing_extensions==4.12.2
 urllib3==2.2.2
-watchdog==5.0.0
 Werkzeug==3.0.4
